assets/style.css
:root {
  --backgroundLight: #730606e3;
  --stripLight: #f2f2f2;
  --brown: #d09342;
}

h1,
h2,
h3 {
  text-align: center;
}
/* Top white banner with photo and info */
header {
  width: auto;
  height: 330px;
  background-color: var(--stripLight);
}
/* beauty incarnate */
.profilePhoto {
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 13%;
  padding-top: 20px;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 5px;
}
.profilePhoto {
  border-radius: 50%;
}

/* overflow: gets rid of of horizontal red scrolling issue. Margin: gets rid of default margin*/
body {
  background-color: var(--backgroundLight);
  margin: 0px;
  overflow-x: hidden;
  font-family: "Press Start 2P", cursive, sans-serif;
}

.parent-container {
  display: flex;
}

.left-red-child {
  /* width: 200px; */
  flex-basis: 10%;
  height: auto;
  background-color: var(--backgroundLight);
}

.left-white-child {
  flex-basis: 10%;
  height: auto;
   background-color: var(--stripLight);
}
/* Main body of content  */
.right-red-child {
  width: 80%;
}

.content {
  display: flex;
  flex-direction: column;
  
}


/* Nav links styling  */
li {
  display: inline;
  
}

ul {
  padding-top: 3%;
  padding-left: 2%;
}

/* Nav links  */
p {
padding: 5%;
}



/* Main Image */
.main-image-pic {
  max-width: 100%;
  max-height: auto;
}


/* Other Images */  
  /*add  border, boxes wrap  */
.other-images {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  max-width: 90%;
  padding: 5%;
}     


.image-2, .image-3, .image-4, .image-5 {
  max-width: 100%;
  flex-basis: 50%;
}

/* Footer */
footer {
  width: auto;
  height: 100px;
  background-color: var(--stripLight);
}

/* should put footer content in vertical line */
.footer-content {
  display: inline;
}

/* .content {
  margin-left: 120px; /* Adjust the margin to create space for the stripe */
} */

/* section {
  height: 400px;
  width: 80%;
  margin: 30px auto;
  border: 10px;
} */

/* old code for flex box */
/* .flexbox-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin-left: 10%;
  margin-right: 10%;
  margin-top: 10%;
  margin-bottom: 10%;
} */

/* old code  */
/* .flexbox-item {
  margin: 10px;
  border: 3px solid #1b1a1ab4;
  width: 40%;
  min-height: 200px;
} */
/* should create an opack hover feature wt slow transition */
/* .flexbox-item :hover {
  cursor: pointer;
  opacity: 0.7;
  transition: 0.5s;
} */

/* .coding-item-1 {
  width: 80%;
  height: 80%;
  /* instead of background image make img href  */
  /* background-image: url(./images/TopScreenshotHoriseon.png); */
  /* background-size: cover; */
  /* cursor: pointer;
} */

/* .coding-item-1 img {
  flex: 0 0 auto;
  margin: 0 10px;
}

.coding-item-2 {
  background-image: url(./images/CodingNotesPic.png);
  background-size: contain;
  background-repeat: no-repeat;
}

.coding-item-3 {
  background-image: url(./images/green-neon-text-coming-soon-green-neon-text-coming-soon-illustration-115797978.webp);
  background-size: calc(104%);
} */ */



/* .stripe { */
  /* White stripe on left side*/
  /* position: fixed; */
  /* top: 0; */
  /* left: 50px; cant move right */
  /* height: 100vh; Adjust the height as per your requirement */
  /* width: 70px; Adjust the width as per your requirement */
  /* background-color: var(--stripLight);
  z-index: 9999; */ */
/* }

